<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/youth"
        android:textSize="50sp"
        android:paddingStart="50sp"
        android:paddingEnd="60sp" />
    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adult"
        android:textSize="50sp"
        android:paddingStart="40sp"
        android:paddingEnd="40sp" />
    <TextView
        android:id="@+id/priceInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/family"
        android:textSize="50sp"
        android:paddingStart="40sp"
        android:paddingEnd="40sp" />
    <TextView
        android:id="@+id/famPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senior"
        android:textSize="50sp"
        android:paddingStart="40sp"
        android:paddingEnd="40sp" />

</LinearLayout>