<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow android:layout_height="104dp">

        <ImageView
            android:id="@+id/imgTrainers"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:contentDescription="@string/imgDescription"
            android:padding="15sp"
            android:src="@drawable/trainers" />

        <TextView
            android:layout_width="600dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/trainersText"
            android:textSize="30sp" />
    </TableRow>
    <TableRow>
        <ImageView
            android:id="@+id/imgClasses"
            android:contentDescription="@string/imgDescription"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:src="@drawable/classes"
            android:padding="15sp" />

        <TextView
            android:layout_width="600dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/classesDesc"
            android:textSize="30sp" />
    </TableRow>
    <TableRow>
        <ImageView
            android:id="@+id/imgWeights"
            android:contentDescription="@string/imgDescription"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:src="@drawable/wieghts"
            android:padding="15sp" />

        <TextView
            android:layout_width="600dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/weightsDesc"
            android:textSize="30sp" />
    </TableRow>
    <TableRow>
        <ImageView
            android:id="@+id/imgMachines"
            android:contentDescription="@string/imgDescription"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:src="@drawable/machines"
            android:padding="15sp" />

        <TextView
            android:layout_width="600dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/machinesDesc"
            android:textSize="30sp" />
    </TableRow>


</TableLayout>